--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@portabletext/react": "^4.0.3",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/types": "^4.13.0",
     "@tailwindcss/postcss": "^4.1.15",
+    "lucide-react": "^0.552.0",
     "next": "15.5.5",
     "next-sanity": "^11.5.3",
     "react": "19.1.0",
